fix(VSwitch): refactor thumb alignment

--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -16,20 +16,15 @@
     background-color: $switch-error-background-color
 
 .v-switch__track
-  border-radius: $switch-track-border-radius
+  border-radius: $switch-track-radius
   height: $switch-track-height
-  left: $switch-track-x
   opacity: $switch-track-opacity
   pointer-events: none
-  position: absolute
-  right: $switch-track-x
-  top: 50%
-  transform: translateY(-50%)
   width: $switch-track-width
 
 .v-switch__thumb
   align-items: center
-  border-radius: 50%
+  border-radius: $switch-thumb-radius
   color: rgb(var(--v-theme-surface))
   display: flex
   height: $switch-thumb-height
@@ -47,11 +42,14 @@
   justify-content: center
 
 .v-switch
+  $switch-thumb-transform: $switch-track-width * .5 - $switch-thumb-width * .5 + $switch-thumb-offset
+
   .v-selection-control__input
     border-radius: 50%
     transition: $switch-control-input-transition
-    transform: translateX(-10px)
+    transform: translateX(-$switch-thumb-transform)
+    position: absolute
 
   .v-selection-control--dirty
     .v-selection-control__input
-      transform: translateX(10px)
+      transform: translateX($switch-thumb-transform)
