--- a/packages/vuetify/src/components/VSwitch/_variables.scss
+++ b/packages/vuetify/src/components/VSwitch/_variables.scss
@@ -6,8 +6,9 @@ $switch-label-margin-inline-start: 10px !default;
 $switch-thumb-elevation: 4 !default;
 $switch-thumb-height: 20px !default;
 $switch-thumb-width: 20px !default;
-$switch-track-border-radius: 8px !default;
+$switch-thumb-offset: 2px !default;
+$switch-thumb-radius: 50% !default;
+$switch-track-radius: 8px !default;
 $switch-track-height: 14px !default;
 $switch-track-opacity: .6 !default;
 $switch-track-width: 36px !default;
-$switch-track-x: 2px !default;
